--- a/app/src/main/res/layout/live_frag.xml
+++ b/app/src/main/res/layout/live_frag.xml
@@ -1,15 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/bg_color"
     >
-    <com.tencent.rtmp.ui.TXCloudVideoView
-        android:id="@+id/video_view"
+    <com.library.base.ProgressLayout
+        android:id="@id/pl_load"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        />
+        android:layout_height="match_parent">
+        <in.srain.cube.views.ptr.PtrClassicFrameLayout
+            android:id="@id/pcfl_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:ptr_resistance="2.1"
+            app:ptr_ratio_of_header_height_to_refresh="1.2"
+            >
+        <android.support.v4.widget.NestedScrollView
+            android:id="@id/nsv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/bg_color"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+                <com.github.fastshape.MyRelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="5dp"
+                    app:clipRadius="6dp"
+                    app:clipBorderWidth="2px"
+                    app:clipBorderColor="@color/divider_color"
+                    >
+                    <ImageView
+                        android:id="@+id/iv_home_live"
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
+                        android:src="@drawable/live_bg"
+                        android:scaleType="centerCrop"
+                        />
+                    <com.github.fastshape.MyTextView
+                        android:id="@+id/tv_live_room_flag"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="直播中"
+                        app:solidColor="@color/home_live"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/white"
+                        android:paddingTop="3dp"
+                        android:paddingBottom="3dp"
+                        android:paddingLeft="7dp"
+                        android:paddingRight="7dp"
+                        />
+                    <com.github.fastshape.MyTextView
+                        android:id="@+id/tv_live_room_peoplenum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="8人观看"
+                        app:solidColor="#FF9A9A9A"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/white"
+                        android:paddingTop="3dp"
+                        android:paddingBottom="3dp"
+                        android:paddingLeft="7dp"
+                        android:paddingRight="7dp"
+                        android:layout_toRightOf="@+id/tv_live_room_flag"
+                        app:topRightRadius="10dp"
+                        app:bottomRightRadius="10dp"
+                        />
+                    <com.github.fastshape.MyTextView
+                        android:id="@+id/tv_live_room_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:text="相玉直播间"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="10dp"
+                        app:solidColor="@color/white"
+                        app:bottomRightRadius="6dp"
+                        app:bottomLeftRadius="6dp"
+                        android:layout_below="@+id/iv_home_live"
+                        />
+                </com.github.fastshape.MyRelativeLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_live_room"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    >
+                </android.support.v7.widget.RecyclerView>
+                <com.github.fastshape.MyRelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="5dp"
+                    app:clipRadius="6dp"
+                    app:clipBorderWidth="2px"
+                    app:clipBorderColor="@color/divider_color"
+                    >
+                    <ImageView
+                        android:id="@+id/iv_live_room2"
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
+                        android:src="@drawable/live_bg"
+                        android:scaleType="centerCrop"
+                        />
+                    <com.github.fastshape.MyTextView
+                        android:id="@+id/tv_live_room_flag2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="直播中"
+                        app:solidColor="@color/home_live"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/white"
+                        android:paddingTop="3dp"
+                        android:paddingBottom="3dp"
+                        android:paddingLeft="7dp"
+                        android:paddingRight="7dp"
+                        />
+                    <com.github.fastshape.MyTextView
+                        android:id="@+id/tv_live_room_peoplenum2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="8人观看"
+                        app:solidColor="#FF9A9A9A"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/white"
+                        android:paddingTop="3dp"
+                        android:paddingBottom="3dp"
+                        android:paddingLeft="7dp"
+                        android:paddingRight="7dp"
+                        android:layout_toRightOf="@+id/tv_live_room_flag2"
+                        app:topRightRadius="10dp"
+                        app:bottomRightRadius="10dp"
+                        />
+                    <com.github.fastshape.MyTextView
+                        android:id="@+id/tv_live_room_name2"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:text="相玉直播间"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="10dp"
+                        app:solidColor="@color/white"
+                        app:bottomRightRadius="6dp"
+                        app:bottomLeftRadius="6dp"
+                        android:layout_below="@+id/iv_live_room2"
+                        />
+                </com.github.fastshape.MyRelativeLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_live_room2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    >
+                </android.support.v7.widget.RecyclerView>
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+        </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+    </com.library.base.ProgressLayout>
 </LinearLayout>
