--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,7 +51,20 @@
         <item name="android:paddingBottom">3dp</item>
         <item name="android:drawablePadding">2dp</item>
     </style>
-
+    <!-- Input dialog theme. -->
+    <style name="InputDialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">#00000000</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="colorControlNormal">@color/colorAccent</item>
+        <item name="android:textColorHint">#777777</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
+    </style>
    <!-- <style name="dialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>&lt;!&ndash;边框&ndash;&gt;
         <item name="android:windowIsFloating">true</item>&lt;!&ndash;是否浮现在activity之上&ndash;&gt;
