--- a/app/src/main/res/layout/home_frag.xml
+++ b/app/src/main/res/layout/home_frag.xml
@@ -69,7 +69,7 @@
                         android:id="@+id/tv_home_live_peoplenum"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="8人观看"
+                        android:text="0人观看"
                         app:solidColor="#FF9A9A9A"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/white"
@@ -125,7 +125,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="直播中"
-                            android:layout_margin="10dp"
+                            android:layout_marginTop="10dp"
                             android:textColor="@color/white"
                             app:solidColor="@color/home_live"
                             android:paddingLeft="6dp"
@@ -133,7 +133,23 @@
                             android:paddingTop="2dp"
                             android:paddingBottom="2dp"
                             android:textSize="11sp"
-                            app:radius="11dp"
+                            />
+                        <com.github.fastshape.MyTextView
+                            android:id="@+id/tv_home_live_peoplenum2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0人观看"
+                            app:solidColor="#FF9A9A9A"
+                            android:layout_marginTop="10dp"
+                            android:textColor="@color/white"
+                            android:paddingLeft="6dp"
+                            android:paddingRight="6dp"
+                            android:paddingTop="2dp"
+                            android:paddingBottom="2dp"
+                            android:layout_toRightOf="@+id/tv_home_live_flag2"
+                            app:topRightRadius="10dp"
+                            android:textSize="11sp"
+                            app:bottomRightRadius="10dp"
                             />
                         <com.github.fastshape.MyTextView
                             android:id="@+id/tv_home_live_name2"
@@ -166,15 +182,32 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="直播中"
-                            android:layout_margin="10dp"
+                            android:layout_marginTop="10dp"
                             android:textColor="@color/white"
                             app:solidColor="@color/home_live"
                             android:paddingLeft="6dp"
                             android:paddingRight="6dp"
                             android:paddingTop="2dp"
                             android:paddingBottom="2dp"
-                            app:radius="11dp"
                             android:textSize="11sp"
+                            />
+
+                        <com.github.fastshape.MyTextView
+                            android:id="@+id/tv_home_live_peoplenum3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0人观看"
+                            app:solidColor="#FF9A9A9A"
+                            android:layout_marginTop="10dp"
+                            android:textColor="@color/white"
+                            android:paddingLeft="6dp"
+                            android:paddingRight="6dp"
+                            android:paddingTop="2dp"
+                            android:paddingBottom="2dp"
+                            android:layout_toRightOf="@+id/tv_home_live_flag3"
+                            app:topRightRadius="10dp"
+                            android:textSize="11sp"
+                            app:bottomRightRadius="10dp"
                             />
                         <com.github.fastshape.MyTextView
                             android:id="@+id/tv_home_live_name3"
