--- a/app/src/main/res/layout/live_room_item.xml
+++ b/app/src/main/res/layout/live_room_item.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="直播中"
-            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
             android:textColor="@color/white"
             app:solidColor="@color/home_live"
             android:paddingLeft="6dp"
@@ -33,7 +33,24 @@
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:textSize="11sp"
-            app:radius="11dp"
+            />
+
+        <com.github.fastshape.MyTextView
+            android:id="@+id/tv_home_live_peoplenum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0人观看"
+            app:solidColor="#FF9A9A9A"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/white"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:layout_toRightOf="@+id/tv_live_room_flag"
+            app:topRightRadius="10dp"
+            android:textSize="11sp"
+            app:bottomRightRadius="10dp"
             />
         <com.github.fastshape.MyTextView
             android:id="@+id/tv_live_room_name"
